--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>com.syncleus</groupId>
         <artifactId>syncleus</artifactId>
-        <version>6-SNAPSHOT</version>
+        <version>6</version>
     </parent>
 
     <groupId>com.aparapi</groupId>
@@ -86,7 +86,7 @@
         <dependency>
             <groupId>com.aparapi</groupId>
             <artifactId>aparapi-jni</artifactId>
-            <version>1.1.3-SNAPSHOT</version>
+            <version>1.4.1</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
